--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -20,3 +20,5 @@ pipelineConfig:
           name: sposcar-echo-access_key_id
         - sh: echo ====================================== TF_AWS_SECRET_ACCESS_KEY= ${TF_AWS_SECRET_ACCESS_KEY} ======================================
           name: sposcar-echo-access_key
+        - sh: echo ====================================== EXECUTE TERRAFORM PLAN ======================================
+          name: sposcar-terraform-plan
