--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -15,14 +15,18 @@ pipelineConfig:
         key: AWS_SECRET_ACCESS_KEY
         name: aws-creds
   pipelines:
-    overrides:
-    - pipeline: release
-      stage: build
-      type: before
-      steps:
-        - sh: echo ====================================== TF_AWS_ACCESS_KEY_ID= ${TF_AWS_ACCESS_KEY_ID} ======================================
-          name: sposcar-echo-access_key_id
-        - sh: echo ====================================== TF_AWS_SECRET_ACCESS_KEY= ${TF_AWS_SECRET_ACCESS_KEY} ======================================
-          name: sposcar-echo-access_key
-        - sh: terraform plan
-          name: sposcar-terraform-plan
+    default:
+       stages:
+        - name: build
+          steps: 
+            - command: terraform
+              args: [plan']
+              name: output-terraform-plan
+            - command: echo ${TF_AWS_ACCESS_KEY_ID}
+              name: output-aws-access_key_id
+            - command: echo ${TF_AWS_SECRET_ACCESS_KEY}
+              name: output-aws-secret_access_key_id
+            #- sh: echo ====================================== TF_AWS_ACCESS_KEY_ID= ${TF_AWS_ACCESS_KEY_ID} ======================================
+            #  name: sposcar-echo-access_key_id
+            #- sh: echo ====================================== TF_AWS_SECRET_ACCESS_KEY= ${TF_AWS_SECRET_ACCESS_KEY} ======================================
+            #  name: sposcar-echo-access_key
