modified pipeline again

--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -17,7 +17,7 @@ pipelineConfig:
   pipelines:
     default:
        stages:
-        - name: build
+        - name: Execute Terraform
           steps: 
             - command: terraform
               args: [plan']
