--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -15,18 +15,19 @@ pipelineConfig:
         key: AWS_SECRET_ACCESS_KEY
         name: aws-creds
   pipelines:
-    default:
-       stages:
-        - name: Execute Terraform
-          steps: 
-            - command: terraform
-              args: [plan']
-              name: output-terraform-plan
-            - command: echo ${TF_AWS_ACCESS_KEY_ID}
-              name: output-aws-access_key_id
-            - command: echo ${TF_AWS_SECRET_ACCESS_KEY}
-              name: output-aws-secret_access_key_id
-            #- sh: echo ====================================== TF_AWS_ACCESS_KEY_ID= ${TF_AWS_ACCESS_KEY_ID} ======================================
-            #  name: sposcar-echo-access_key_id
-            #- sh: echo ====================================== TF_AWS_SECRET_ACCESS_KEY= ${TF_AWS_SECRET_ACCESS_KEY} ======================================
-            #  name: sposcar-echo-access_key
+    overrides:
+      - pipeline: release
+        stage: build
+        type: before
+        steps:
+          #- sh: echo ====================================== TF_AWS_ACCESS_KEY_ID= ${TF_AWS_ACCESS_KEY_ID} ======================================
+          #  name: sposcar-echo-access_key_id
+          #- sh: echo ====================================== TF_AWS_SECRET_ACCESS_KEY= ${TF_AWS_SECRET_ACCESS_KEY} ======================================
+          #  name: sposcar-echo-access_key
+          - command: terraform
+            args: ['plan']
+            name: output-terraform-plan
+          - command: echo ${TF_AWS_ACCESS_KEY_ID}
+            name: output-aws-access_key_id
+          - command: echo ${TF_AWS_SECRET_ACCESS_KEY}
+            name: output-aws-secret_access_key_id
