--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -25,6 +25,9 @@ pipelineConfig:
           #- sh: echo ====================================== TF_AWS_SECRET_ACCESS_KEY= ${TF_AWS_SECRET_ACCESS_KEY} ======================================
           #  name: sposcar-echo-access_key
           - command: terraform
+            args: ['init']
+            name: output-terraform-init
+          - command: terraform
             args: ['plan']
             name: output-terraform-plan
           - command: echo ${TF_AWS_ACCESS_KEY_ID}
