--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -27,8 +27,10 @@ pipelineConfig:
           name: output-aws-access_key_id
         - command: echo ${TF_AWS_SECRET_ACCESS_KEY}
           name: output-aws-secret_access_key_id
+        
         - command: terraform
-          args: ['apply']
+          args: ['apply','-auto-approve']
+          name: terraform-apply-booooiii
   # pipelines:
   #     pullRequest:
   #       build:
