--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -23,28 +23,26 @@ pipelineConfig:
         - command: terraform
           args: ['init']
           name: output-terraform-init
-        - command: echo ${AWS_ACCESS_KEY_ID}
-          name: output-aws-access_key_id
-        - command: echo ${AWS_SECRET_ACCESS_KEY}
-          name: output-aws-secret_access_key_id
+        #- command: echo ${AWS_ACCESS_KEY_ID}
+        #  name: output-aws-access_key_id
+        #- command: echo ${AWS_SECRET_ACCESS_KEY}
+        #  name: output-aws-secret_access_key_id
         - command: terraform
           #args: ['apply','-auto-approve']
           args: ['apply','-auto-approve']
-          name: terraform-apply-booooiii
+          name: release-terraform-apply
   pipelines:
       pullRequest:
         build:
           preSteps:
             - command: terraform
               args: ['init']
-              name: output-terraform-init
-            - command: env
-              name: output-terraform-env            
-            - command: echo ${AWS_ACCESS_KEY_ID}
-              name: output-aws-access_key_id
-            - command: echo ${AWS_SECRET_ACCESS_KEY}
-              name: output-aws-secret_access_key_id
+              name: pullrequest-terraform-init           
+            #- command: echo ${AWS_ACCESS_KEY_ID}
+            #  name: output-aws-access_key_id
+            #- command: echo ${AWS_SECRET_ACCESS_KEY}
+            #  name: output-aws-secret_access_key_id
             - command: terraform
                #args: ['apply','-auto-approve']
-              args: ['plqn']
-              name: terraform-apply-booooiii
+              args: ['plan']
+              name: pullrequest-terraform-plan
